--- a/FRONTEND/src/app/module/reccer/application/application-history/application-history.component.html
+++ b/FRONTEND/src/app/module/reccer/application/application-history/application-history.component.html
@@ -20,13 +20,16 @@
 							</div>
 							<div class="ms-2 c-details">
 								<div class="mb-1 fs-5">{{item.position?.company?.companyName}}</div>
-								<span>{{item.dateTime
+								<span>{{item.createdTime
 									| date:'fullDate'}}</span>
 							</div>
 						</div>
 					</div>
-					<div class="mt-3">
-						<div class="heading fs-4">{{item.position?.positionName}}</div>
+					<div class="mt-3 d-flex flex-row align-items-center">
+						<div class=" heading fs-4">{{item.position?.positionName}}</div>
+						<div class="heading ms-1 fs-5 rounded-2"
+							style="padding: 4px; background-color: rgb(253, 255, 198) ;width: fit-content;">
+							{{ item?.position?.level?.levelName }}</div>
 					</div>
 				</div>
 				}
