--- a/FrontEnd/src/app/layout/footer/footer.component.html
+++ b/FrontEnd/src/app/layout/footer/footer.component.html
@@ -31,7 +31,7 @@
 	</div>
 </div> -->
 
-<footer class="text-white text-center text-lg-start rounded" style="background-color: #3f51b5">
+<footer class="text-white text-center text-lg-start rounded-top" style="background-color: #3f51b5">
 	<div class="container p-4">
 		<div class="row">
 			<div class="col-lg-6 col-md-12 mb-4 mb-md-0">
