--- a/FRONTEND/src/app/module/cv/candidate-profile/personal-detail/personal-detail.component.html
+++ b/FRONTEND/src/app/module/cv/candidate-profile/personal-detail/personal-detail.component.html
@@ -9,7 +9,7 @@
 					<div class="col">
 						<i class="fa-regular fa-envelope p-2" aria-hidden="true"></i>
 						<span
-							><b>email: </b>
+							><b>Email: </b>
 							<a
 								class="text-decoration-none text-primary"
 								target="_blank"
@@ -21,7 +21,7 @@
 					<div class="col">
 						<i class="fa fa-phone-slash p-2" aria-hidden="true"></i>
 						<span
-							><b>phone: </b>
+							><b>Phone: </b>
 							<a
 								target="_blank"
 								class="text-decoration-none text-primary"
