--- a/FrontEnd/src/app/layout/header/header.component.html
+++ b/FrontEnd/src/app/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" class="rounded-bottom">
+<mat-toolbar color="primary" class="">
 	<mat-toolbar-row fxLayout="row" fxLayoutAlign="space-between center">
 		<div class="gap-2">
 			<button mat-button (click)="handleRouteToHomepage()">
