--- a/FrontEnd/src/app/module/position/position.component.html
+++ b/FrontEnd/src/app/module/position/position.component.html
@@ -29,7 +29,7 @@
 					</div>
 
 					<div class="col-lg-2 col-12 my-lg-0 my-2 d-flex flex-row-reverse fs-4">
-						Result count: {{this.fetchedPositions?.length}}
+						Result count: {{this.totalMatchedInDb}}
 					</div>
 				</div>
 
