--- a/FRONTEND/src/app/module/reccer/interview/add-form/add-form.component.html
+++ b/FRONTEND/src/app/module/reccer/interview/add-form/add-form.component.html
@@ -21,8 +21,8 @@
 			[labelField]="'user.fullName'" [label]="'Interviewer'" [observableOptions]="this.interviewerData$"
 			[formGroup]="this.addForm"></app-autocomplete>
 
-		<div class="d-flex flex-row w-100 mb-2">
-			<mat-form-field class="w-50">
+		<div class="row g-0 w-100 mb-2">
+			<mat-form-field class="col-lg-6 col-12">
 				<mat-label>Meeting Date</mat-label>
 				<input formControlName="meetingDate" oninput="this.value=this.value.replace(/[^0-9\/]/g,'')" matInput
 					[matDatepicker]="picker">
@@ -38,9 +38,9 @@
 				<mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
 				<mat-datepicker #picker></mat-datepicker>
 			</mat-form-field>
-			<div class="w-50">
-				<div class="d-flex flex-row w-100">
-					<mat-form-field class="ms-2 w-50">
+			<div class="col-lg-6 col-12">
+				<div class="d-flex ms-lg-2 flex-row w-100">
+					<mat-form-field class="w-50">
 						<mat-label>Start time</mat-label>
 						<input matInput type="time" placeholder="Start time" formControlName="startTime">
 						@if(addForm.get('startTime')?.invalid){
