--- a/FRONTEND/src/app/module/reccer/interviewer/interview-history/interview-history.component.html
+++ b/FRONTEND/src/app/module/reccer/interviewer/interview-history/interview-history.component.html
@@ -7,34 +7,34 @@
 		@for (item of this.interviewsData; track $index) {
 		<div class="card p-4 m-3 shadow">
 			<div>
-				<div class="heading fs-5 d-flex flex-row">
-					<div>
+				<div class="fs-5 row justify-content-lg-between">
+					<div class="col-lg-6 col-12">
 						{{item.meetingDate | date:"fullDate"}}
 					</div>
-					<div class="ms-auto">
+					<div class="col-lg-4 col-12 d-flex justify-content-lg-end ">
 						{{item.startTime?.slice(0,
 						5)}} -
 						{{item.endTime?.slice(0, 5)}}
 					</div>
 				</div>
-				<div class="mt-1 d-flex flex-row" style="line-height: 20px; font-weight: 400;">
-					<div>
+				<div class="mt-1 row justify-content-lg-between" style="line-height: 20px; font-weight: 400;">
+					<div class="col-lg-7 col-12">
 						<i class="bi bi-building-fill"></i>
 						{{item.address}}
 					</div>
-					<div class="ms-auto">
+					<div class="col-lg-4 col-12 d-flex justify-content-lg-end">
 						{{item.detailLocation}}
 					</div>
 				</div>
 			</div>
 			<div class="d-flex flex-row" style="width: 100%;">
 				<div class="fs-5 mt-4" style="width: 100%;">
-					<div class="heading fs-5 d-flex flex-row">
-						<div style="cursor: pointer;"
+					<div class="heading fs-5 row justify-content-lg-between">
+						<div class="col-lg-6 col-12" style="cursor: pointer;"
 							[routerLink]="['/positions/detail', item.application?.position?.positionId]">
 							{{item.application?.position?.positionName}}
 						</div>
-						<div class="ms-auto" style="font-size: 17px;">
+						<div class="col-lg-5 col-12 d-flex justify-content-lg-end" style=" font-size: 17px;">
 							{{item.application?.position?.startDate | date: "dd/MM/yyyy"}} -
 							{{item.application?.position?.endDate | date: "dd/MM/yyyy"}}
 						</div>
