--- a/FRONTEND/src/app/module/reccer/interviewer/interviewer.component.html
+++ b/FRONTEND/src/app/module/reccer/interviewer/interviewer.component.html
@@ -9,10 +9,9 @@
 	<div class="mt-2 d-flex me-4 flex-row-reverse fs-3">
 		Result count: {{this.fetchedInterviewers?.length}}
 	</div>
-	<div class="d-flex flex-row" style="height: fit-content;">
-
-		<div class="p-2 rounded-2 mt-4"
-			style="width: 25%; height: fit-content; border: green solid 1px; background: linear-gradient(to right, #4b07a3, #1838ed);">
+	<div class="row" style="height: fit-content;">
+		<div class="col-lg-3 p-2 rounded-2 mt-4"
+			style="height: fit-content; border: green solid 1px; background: linear-gradient(to right, #4b07a3, #1838ed);">
 			<form class="p-4" style="width: 100%;" [formGroup]="this.filterForm">
 				<mat-form-field style="width: 100%;">
 					<mat-label>Search</mat-label>
@@ -31,16 +30,17 @@
 					style="width: 100%; background-color: #ffffff; border-top-left-radius: 0.25rem; border-top-right-radius: 0.25rem;">
 					<p class="p-3">
 						<mat-slide-toggle formControlName="isFreeTime"> Is Free Time </mat-slide-toggle>
-						<mat-slide-toggle class="mt-2" formControlName="isBusyTime"> Is Busy Time </mat-slide-toggle>
+						<mat-slide-toggle class="mt-2 ms-lg-0 ms-2" formControlName="isBusyTime"> Is Busy Time
+						</mat-slide-toggle>
 					</p>
 				</section>
 
-				<div class="d-flex flex-row mt-4">
-					<mat-form-field>
+				<div class="row mt-4">
+					<mat-form-field class="col-6">
 						<mat-label>From time</mat-label>
 						<input matInput type="time" placeholder="From time" formControlName="fromTime">
 					</mat-form-field>
-					<mat-form-field class="ms-2">
+					<mat-form-field class="col-6">
 						<mat-label>To time</mat-label>
 						<input matInput type="time" placeholder="To time" formControlName="toTime">
 					</mat-form-field>
@@ -68,23 +68,20 @@
 
 			</form>
 		</div>
-		<div class="ms-2 p-2 rounded-1" style="width: 75%; height: 600px; overflow-y: scroll;">
+		<div class="col-lg-9 p-2 rounded-1" style="height: 600px; overflow-y: scroll;">
 			@for (item of fetchedInterviewers; track item) {
 			<div>
-				<div class="d-flex flex-row card py-4 m-3 shadow custom-hover"
-					style=" padding-left: 30px; padding-right: 40px;">
-					<div class="d-flex justify-content-between" style="width: 15%;">
-						<div class="d-flex flex-row align-items-center">
-							<div class="icon"><img style="border-radius: 50%;" width="125px" height="125px"
-									src="{{item.user?.imageURL}}" alt="{{item.user?.fullName}} avatar" />
-							</div>
+				<div class="row py-4 m-3 shadow custom-hover" style="padding-left: 30px; padding-right: 40px;">
+					<div class="col-lg-2 col-12">
+						<div class="w-100 h-100 ">
+							<img class="w-100 h-100" style="border-radius: 50%;" src="{{item.user?.imageURL}}"
+								alt="{{item.user?.fullName}} avatar" />
 						</div>
 					</div>
-					<div class="py-2" style="width: 60%; margin-left: 30px;">
+					<div class="py-2 col">
 						<div class="heading fs-4">{{item.user?.fullName}}</div>
 						<div style="line-height: 20px; margin-top: 15px;">
-							<div><i class="bi bi-cake2"></i> {{item.user?.dateOfBirth | date: "dd/MM/yyyy"}}
-							</div>
+							<i class="bi bi-cake2"></i> {{item.user?.dateOfBirth | date: "dd/MM/yyyy"}}
 							<div><i class="bi bi-envelope-at"></i>
 								<a href="mailto:{{item.user?.email}}" class="mt-3 ms-2"
 									style="line-height: 1.5; font-size: 16px;">{{item.user?.email}}
@@ -107,11 +104,11 @@
 							}
 							@default {
 							@if (item.daysToLastInterview){
-							@if (item.daysToLastInterview < 0){ Newest interview was {{item.daysToLastInterview*-1}}
+							@if (item.daysToLastInterview < 0) { Newest interview was {{item.daysToLastInterview*-1}}
 								days ago } @else { Newest interview is {{item.daysToLastInterview}} days from now } } }
 								} </div>
 						</div>
-						<div class="py-2 ms-4 d-flex flex-row justify-content-center" style=" width: 25%;">
+						<div class="py-2 d-flex flex-row justify-content-end w-25">
 							<button mat-icon-button matTooltip="New interview"
 								(click)="this.openAddInterviewDialog(item.interviewerId, '100ms', '0ms')">
 								<mat-icon>group_add</mat-icon>
@@ -121,12 +118,10 @@
 								<mat-icon>list</mat-icon>
 							</button>
 						</div>
-
 					</div>
 				</div>
-
 				}
-			</div>
 
+			</div>
 		</div>
 	</div>
