--- a/FrontEnd/src/app/module/position/add-form/add-form.component.html
+++ b/FrontEnd/src/app/module/position/add-form/add-form.component.html
@@ -41,8 +41,8 @@
 
 
 			@if (this.enterMinMaxSalaryRange) {
-			<div class="d-flex flex-row">
-				<mat-form-field class="" style="width: 120%;">
+			<div class="row">
+				<mat-form-field class="col-lg-6">
 					<mat-label><i class="bi bi-coin" style="color: rgb(150, 150, 42); font-size: 20px;"></i>
 						Min Salary (USD)</mat-label>
 					<input oninput="this.value=this.value.replace(/[^0-9]/g,'')" type="number" matInput placeholder=""
@@ -62,7 +62,7 @@
 					}
 					}
 				</mat-form-field>
-				<mat-form-field class="ms-2" style="width: 120%;">
+				<mat-form-field class="col-lg-6">
 					<mat-label><i class="bi bi-coin" style="color: rgb(150, 150, 42); font-size: 20px;"></i>
 						Max Salary (USD)</mat-label>
 					<input oninput="this.value=this.value.replace(/[^0-9]/g,'')" type="number" matInput placeholder=""
