--- a/FRONTEND/src/app/module/reccer/event/add-form/add-form.component.html
+++ b/FRONTEND/src/app/module/reccer/event/add-form/add-form.component.html
@@ -54,8 +54,8 @@
 			}
 		</mat-form-field>
 
-		<div class="d-flex flex-row w-100 mb-2">
-			<mat-form-field class="w-75">
+		<div class="row mb-2">
+			<mat-form-field class="col-lg-9">
 				<mat-label>Start Date</mat-label>
 				<input formControlName="startDate" oninput="this.value=this.value.replace(/[^0-9\/]/g,'')" matInput
 					[matDatepicker]="startDatePicker">
@@ -71,8 +71,8 @@
 				<mat-datepicker-toggle matIconSuffix [for]="startDatePicker"></mat-datepicker-toggle>
 				<mat-datepicker #startDatePicker></mat-datepicker>
 			</mat-form-field>
-			<div class="d-flex flex-row w-25">
-				<mat-form-field class="ms-2 w-100">
+			<div class="d-flex flex-row col-lg-3">
+				<mat-form-field class="w-100">
 					<mat-label>Start time</mat-label>
 					<input matInput type="time" placeholder="Start time" formControlName="startTime">
 					@if(addForm.get('startTime')?.invalid){
@@ -83,8 +83,8 @@
 
 		</div>
 
-		<div class="d-flex flex-row w-100 mb-2">
-			<mat-form-field class="w-75">
+		<div class="row mb-2">
+			<mat-form-field class="col-lg-9">
 				<mat-label>End Date</mat-label>
 				<input formControlName="endDate" oninput="this.value=this.value.replace(/[^0-9\/]/g,'')" matInput
 					[matDatepicker]="endDatePicker">
@@ -103,8 +103,8 @@
 				<mat-datepicker-toggle matIconSuffix [for]="endDatePicker"></mat-datepicker-toggle>
 				<mat-datepicker #endDatePicker></mat-datepicker>
 			</mat-form-field>
-			<div class="d-flex flex-row w-25">
-				<mat-form-field class="ms-2 w-100">
+			<div class="d-flex flex-row col-lg-9">
+				<mat-form-field class="w-100">
 					<mat-label>End time</mat-label>
 					<input matInput type="time" placeholder="Endtime" formControlName="endTime">
 					@if(addForm.get('endTime')?.invalid){
